test/classes/forwarding/forwarding-cycle.good
forwarding-cycle.chpl:11: In function 'main':
forwarding-cycle.chpl:4: error: forwarding cycle detected
forwarding-cycle.chpl:7: note: for the type B
